Fill mint chicken HTML page

--- a/recipes/mint_chicken.html
+++ b/recipes/mint_chicken.html
@@ -8,6 +8,24 @@
         <h1>Mint Chicken</h1>
         <img src="../images/mint_chicken.jpeg"
         alt="A photo of mint chicken">
+        <h2>Minty Fresh!</h2>
+        <p>Want to meet your protein macros and keey your breath fresh? Try this recipe!</p>
+
+        <ul>
+            <li>Skinless, boneless chicken breast halves</li>
+            <li>Garlic cloves, crushed</li>
+            <li>1/2 cup all-purpose flour</li>
+            <li>1/2 cup margarine</li>
+            <li>1/4 cup fresh lemon juice</li>
+            <li>1/2 cup chopped fresh mint leaves</li>
+        </ul>
+
+        <ol>
+            <li>In a medium bowl, mix together the chicken pieces and garlic. Toss with the flour just to coat, and shake off excess.</li>
+            <li>Heat the margarine in a large skillet over medium-high heat.</li>
+            <li>Add the chicken pieces; cook and stir until browned. </li>
+            <li>Add the mint leaves and lemon juice, cover and steam for about 5 minutes, just until the chicken is cooked through. Do not over cook the chicken or it will be tough.</li>
+        </ol>
 
     </body>
 </html>
