Fill strawberry spinach salad page

--- a/recipes/strawberry_spinach_salad.html
+++ b/recipes/strawberry_spinach_salad.html
@@ -8,6 +8,29 @@
         <h1>Strawberry Spinach Salad</h1>
         <img src="../images/strawberry_spinach_salad.png"
         alt="A photo of Strawberry spinach salad">
+        <h2>How healthy you are!</h2>
+        <p>For my fellow fruit enjoyers out there, this recipe will fill you up!</p>
+
+        <ul>
+            <li>White sugar</li>
+            <li>Olive oil</li>
+            <li>Distilled White Vinegar</li>
+            <li>Sesame seeds</li>
+            <li>Poppy seeds</li>
+            <li>Minced onions</li>
+            <li>Paprika</li>
+            <li>Worcestershire sauce</li>
+            <li>Strawberries</li>
+            <li>Fresh spinach</li>
+            <li>Blanched almonds</li>
+        </ul>
+
+        <ol>
+            <li>Make dressing: Whisk together sugar, oil, vinegar, sesame seeds, poppy seeds, onion, paprika, and Worcestershire in a medium bowl. Cover and chill for 1 hour.</li>
+            <li>Make salad: Combine strawberries, spinach, and almonds in a large bowl.</li>
+            <li>Pour dressing over salad; toss to coat. Refrigerate for 10 to 15 minutes before serving.</li>
+        </ol>
+
 
     </body>
 </html>
