Add header image, classes and style sheet to add color to site

--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
+<!--
+    Author: Tim Supan
+    Title: Odin-Recipes, an HTML and CSS Exercise from The Odin Project
+    Date Modified: March 30, 2023
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Odin-Recipes</title>
+        <link rel="stylesheet" href="./style.css" />
     </head>
+
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="mainHeader">Odin Recipes</h1>
+        <img class="mainImg" src="./images/kirby.jpeg" />
+        <br />
 
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <img id="mainLasagna" src="./images/lasagna.png" alt="A photo of lasagna"/>
+            <br/>
+
             <li><a href="./recipes/mint_chicken.html">Mint Chicken</a></li>
+            <img id="mainMintChicken" src="./images/mint_chicken.jpeg" alt="A photo of mint chicken" />
+            <br/>
+
             <li><a href="./recipes/strawberry_spinach_salad.html">Strawberry Spinach Salad</a></li>
+            <img id="mainStrawberrySpinachSalad" src="./images/strawberry_spinach_salad.png" alt="A photo of Strawberry spinach salad" />
+            <br />
+
+            <br />
+            <a class="returnBtn" href="#top">Return to the top of Odin Recipes!</a>
+
         </ul>
        
        
