--- a/recipes/strawberry_spinach_salad.html
+++ b/recipes/strawberry_spinach_salad.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Odin-Recipes</title>
+        <link rel="stylesheet" href="../style.css" />
     </head>
     <body>
         <h1>Strawberry Spinach Salad</h1>
-        <img src="../images/strawberry_spinach_salad.png"
+        <img class="mainImg" src="../images/strawberry_spinach_salad.png"
         alt="A photo of Strawberry spinach salad">
         <h2>How healthy you are!</h2>
         <p>For my fellow fruit enjoyers out there, this recipe will fill you up!</p>
@@ -31,6 +32,8 @@
             <li>Pour dressing over salad; toss to coat. Refrigerate for 10 to 15 minutes before serving.</li>
         </ol>
 
+        <br />
+        <a class="returnBtn" href="../index.html">Return to home page of Odin Recipes!</a>
 
     </body>
 </html>
