--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Odin-Recipes</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Lasagna</h1>
-        <img src="../images/lasagna.png"
-        alt="A photo of lasagna">
+        <img class="mainImg" src="../images/lasagna.png"
+        alt="A photo of lasagna" />
         <h2>Garfield's favourite!</h2>
         <p>A lasagna recipe that's easy to follow! </p>
 
@@ -33,6 +34,9 @@
         <li>Cover with foil and bake.</li>
         <li>Let the lasagna rest before serving.</li>
        </ol>
+
+        <br />
+        <a class="returnBtn" href="../index.html">Return to home page of Odin Recipes!</a>
 
     </body>
 </html>
