--- a/recipes/mint_chicken.html
+++ b/recipes/mint_chicken.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>Odin-Recipes</title>
+        <link rel="stylesheet" href="../style.css" />
     </head>
+
     <body>
         <h1>Mint Chicken</h1>
-        <img src="../images/mint_chicken.jpeg"
-        alt="A photo of mint chicken">
+        <img class="mainImg" src="../images/mint_chicken.jpeg"
+        alt="A photo of mint chicken" />
         <h2>Minty Fresh!</h2>
         <p>Want to meet your protein macros and keey your breath fresh? Try this recipe!</p>
 
@@ -26,6 +28,9 @@
             <li>Add the chicken pieces; cook and stir until browned. </li>
             <li>Add the mint leaves and lemon juice, cover and steam for about 5 minutes, just until the chicken is cooked through. Do not over cook the chicken or it will be tough.</li>
         </ol>
+
+        <br />
+        <a class="returnBtn" href="../index.html">Return to home page of Odin Recipes!</a>
 
     </body>
 </html>
