Add style to mainHeader and mainImage for practice

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <h1 class="mainHeader">Odin Recipes</h1>
+        <h1 class="mainHeader"><span>Odin Recipes</span></h1>
         <img class="mainImg" src="./images/kirby.jpeg" />
         <br />
 
